main/default/objects/Event__c/fields/Grouped_Field_Values__c.field-meta.xml
<CustomField>
    <fullName>Grouped_Field_Values__c</fullName>
    <label>Grouped Field Values</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>