main/default/objects/Event__c/fields/RecordCount__c.field-meta.xml
<CustomField>
    <fullName>RecordCount__c</fullName>
    <label>Number of Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>