main/default/objects/Event__c/fields/Rule__c.field-meta.xml
<CustomField>
    <fullName>Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rule</label>
    <referenceTo>Rule__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Rules</relationshipName>
    <type>Lookup</type>
</CustomField>