main/default/objects/Event__c/fields/Rule_Description__c.field-meta.xml
<CustomField>
    <fullName>Rule_Description__c</fullName>
    <formula>Rule__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rule Description</label>
    <type>Text</type>
</CustomField>