main/default/objects/Event__c/fields/Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>Rule_Name__c</fullName>
    <formula>Rule__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rule Name</label>
    <type>Text</type>
</CustomField>