main/default/objects/Event__c/recordTypes/Archival.recordType-meta.xml
<RecordType>
    <fullName>Archival</fullName>
    <active>true</active>
    <label>Archival</label>
</RecordType>