main/default/objects/Event__c/recordTypes/Monitoring.recordType-meta.xml
<RecordType>
    <fullName>Monitoring</fullName>
    <active>true</active>
    <label>Monitoring</label>
</RecordType>