main/default/objects/Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Rule__c</columns>
    <columns>Criteria__c</columns>
    <columns>Actions__c</columns>
    <columns>RecordCount__c</columns>
    <columns>Event_Details__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>